gdax/compiling_error.txt
In file included from /usr/include/c++/5/random:35:0,
                 from /home/declan/Projects/gdax/trade.cpp:1:
/usr/include/c++/5/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support \
  ^
/home/declan/Projects/gdax/trade.cpp: In function ‘std::vector<coinbase_row> LoadData(const char*)’:
/home/declan/Projects/gdax/trade.cpp:68:26: error: ‘stol’ is not a member of ‘std’
  cb.timestamp = (time_t) std::stol (timestamp_str,0);
                          ^
/home/declan/Projects/gdax/trade.cpp:72:18: error: ‘stod’ is not a member of ‘std’
  cb.open_price = std::stod (open_price_str,0);
                  ^
/home/declan/Projects/gdax/trade.cpp:76:18: error: ‘stod’ is not a member of ‘std’
  cb.high_price = std::stod (high_price_str,0);
                  ^
/home/declan/Projects/gdax/trade.cpp:80:17: error: ‘stod’ is not a member of ‘std’
  cb.low_price = std::stod (low_price_str,0);
                 ^
/home/declan/Projects/gdax/trade.cpp:84:19: error: ‘stod’ is not a member of ‘std’
  cb.close_price = std::stod (close_price_str,0);
                   ^
/home/declan/Projects/gdax/trade.cpp:88:18: error: ‘stod’ is not a member of ‘std’
  cb.volume_btc = std::stod (volume_btc_str);
                  ^
/home/declan/Projects/gdax/trade.cpp:92:18: error: ‘stod’ is not a member of ‘std’
  cb.volume_usd = std::stod (volume_usd_str,0);
                  ^
/home/declan/Projects/gdax/trade.cpp:96:22: error: ‘stod’ is not a member of ‘std’
  cb.weighted_price = std::stod (weighted_price_str,0);
                      ^
/home/declan/Projects/gdax/trade.cpp: In function ‘void RunExperiment(long double&, long int&, long double&, long double&, long int&, long double&, long double&, std::vector<coinbase_row>&, double, double, double, double, bool)’:
/home/declan/Projects/gdax/trade.cpp:158:26: warning: range-based ‘for’ loops only available with -std=c++11 or -std=gnu++11
     for(coinbase_row n : cbv) {
                          ^
/home/declan/Projects/gdax/trade.cpp:217:20: warning: range-based ‘for’ loops only available with -std=c++11 or -std=gnu++11
     for(double p : pnls) {
                    ^
/home/declan/Projects/gdax/trade.cpp:225:20: warning: range-based ‘for’ loops only available with -std=c++11 or -std=gnu++11
     for(double p : pnls) {
                    ^
/home/declan/Projects/gdax/trade.cpp: At global scope:
/home/declan/Projects/gdax/trade.cpp:275:30: error: variable or field ‘SetRandomEMAParams’ declared void
 void SetRandomEMAParams(std::default_random_engine &re, double &fast, double &slow)
                              ^
/home/declan/Projects/gdax/trade.cpp:275:25: error: ‘default_random_engine’ is not a member of ‘std’
 void SetRandomEMAParams(std::default_random_engine &re, double &fast, double &slow)
                         ^
/home/declan/Projects/gdax/trade.cpp:275:53: error: ‘re’ was not declared in this scope
 void SetRandomEMAParams(std::default_random_engine &re, double &fast, double &slow)
                                                     ^
/home/declan/Projects/gdax/trade.cpp:275:57: error: expected primary-expression before ‘double’
 void SetRandomEMAParams(std::default_random_engine &re, double &fast, double &slow)
                                                         ^
/home/declan/Projects/gdax/trade.cpp:275:71: error: expected primary-expression before ‘double’
 void SetRandomEMAParams(std::default_random_engine &re, double &fast, double &slow)
                                                                       ^
/home/declan/Projects/gdax/trade.cpp: In function ‘int main(int, char**)’:
/home/declan/Projects/gdax/trade.cpp:339:2: error: ‘default_random_engine’ is not a member of ‘std’
  std::default_random_engine re;
  ^
/home/declan/Projects/gdax/trade.cpp:367:32: error: ‘re’ was not declared in this scope
    default: SetRandomEMAParams(re, fast_ema_weight_buy, slow_ema_weight_buy); SetRandomEMAParams(re, fast_ema_weight_sell, slow_ema_weight_sell); break;
                                ^
/home/declan/Projects/gdax/trade.cpp:367:76: error: ‘SetRandomEMAParams’ was not declared in this scope
    default: SetRandomEMAParams(re, fast_ema_weight_buy, slow_ema_weight_buy); SetRandomEMAParams(re, fast_ema_weight_sell, slow_ema_weight_sell); break;
                                                                            ^
